add code highlighting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
     <!-- Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700" rel="stylesheet">
 
+    <!-- Rouge Github Theme -->
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/syntax_github.css">
+
     <!-- Bootstrap Modified -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 
