--- a/_includes/share.html
+++ b/_includes/share.html
@@ -27,7 +27,7 @@
     </div>
     <ul>
         <li>
-        <a class="small smoothscroll" href="#disqus_thread"></a>
+        <a class="small smoothscroll" href="#utterances_thread"></a>
         </li>
     </ul>
     {% endif %}
