--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@ layout: default
 
     <div id="comments" class="row mb-5">
         <div class="col-md-8">
-            {% include disqus.html %}
+            {% include utterances.html %}
         </div>
     </div>
 
